# k-agent

./: .env.template  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md
src/: agent.rs  kubernetes.rs  main.rs  service.rs
src/kubernetes_objects/: authorization_policy.rs  config_map.rs  deployment.rs  external_name.rs  ingress.rs  namespace.rs  network_policy.rs  pvc.rs  registry_hub.rs  service.rs  storage_carrier.rs
src/object/: authorization_policy.rs  config_map.rs  deployment.rs  external_name.rs  ingress.rs  namespace.rs  network_policy.rs  pvc.rs  registry_hub.rs  service.rs  storage_carrier.rs
