[package]
name = "don-kagent"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
colored = "3.1.1"
sysinfo = "0.37.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] } # For converting struct to JSON
serde_json = "1.0"
chrono = "0.4"
chrono-tz="0.10.4"
thiserror = "2.0.18"
regex = "1.12.3"
base64 = "0.22.1"
